input forms in loginscreen

--- a/partials/loginscreen.html
+++ b/partials/loginscreen.html
@@ -1,1 +1,14 @@
-<p>Noch ein test</p>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-3">
+			<div class="panel panel-default">
+				<div class="panel-header">User Login</div>
+				<div class="panel-body">	
+					<input type="text" name="UserID" value="" placeholder="Username">
+					<input type="text" name="UserPW" value="" placeholder="Password">
+					<button type="submit" class="btn btn-default">Sign in</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
