--- a/partials/loginscreen.html
+++ b/partials/loginscreen.html
@@ -2,11 +2,11 @@
 	<div class="row">
 		<div class="col-sm-3">
 			<div class="panel panel-default">
-				<div class="panel-header">User Login</div>
+				<div class="panel-header">User</div>
 				<div class="panel-body">	
-					<input type="text" name="UserID" value="" placeholder="Username">
-					<input type="text" name="UserPW" value="" placeholder="Password">
-					<button type="submit" class="btn btn-default">Sign in</button>
+					<input ng-model="usr" type="text" name="UserID" value="" placeholder="Username">
+					<input ng-model="pwd" type="password" name="UserPW" value="" placeholder="Password">
+					<button type="submit" class="btn btn-default" ng-click="login()">Sign in</button>
 				</div>
 			</div>
 		</div>
