--- a/partials/loginscreen.html
+++ b/partials/loginscreen.html
@@ -6,7 +6,8 @@
 				<div class="panel-body">	
 					<input ng-model="usr" type="text" name="UserID" value="" placeholder="Username">
 					<input ng-model="pwd" type="password" name="UserPW" value="" placeholder="Password">
-					<button type="submit" class="btn btn-default" ng-click="login()">Sign in</button>
+					<button type="submit" class="btn btn-default" ng-click="login()">Log in</button>
+					<button type="submit" class="btn btn-default" ng-click="logout()">Log out</button>
 				</div>
 			</div>
 		</div>
