navbar temporarily in index.html

--- a/partials/adminpanel.html
+++ b/partials/adminpanel.html
@@ -1,20 +1,5 @@
 
 <!-- @todo: Proper Layout / Containers are testing objects -->
-
-<div class="container">
-	<div class="row">
-		<div class="col-sm-3">
-			<div class="panel panel-default">
-				<div class="panel-header">User: {{user}}</div>
-				<div class="panel-body" ng-controller="LoginCtrl">
-				<button type="submit" class="btn btn-default" ng-click="logout()">Log out</button>	
-				</div>
-			</div>
-								
-		</div>
-	</div>
-</div>
-
 <div class="container">
 	<div class="row">
 		<div class="col-sm-3">
@@ -33,18 +18,18 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-10">
-			<div class="panel panel-default">
-				<div class="panel-header">Principal List</div>
-				<div class="panel-body">
-					<ul class="principals">
-						<li ng-repeat="principal in principals">
-							<p>Principal: </p><p>Created by: </p>
-						</li>
-					</ul>
-
-				</div>
-			</div>
-								
+			<table class="table table-striped">
+				<tr>
+					<th>ID</th>
+					<th>Principal Name</th>
+					<th>Created By</th>
+				</tr>
+				<tr ng-repeat="principal in principals">
+					<td>{{principal.id}}</th>
+					<td>{{principal.name}}</th>
+					<td>{{principal.author}}</th>
+				</tr>
+			</table>						
 		</div>
 	</div>
 </div>
