--- a/partials/adminpanel.html
+++ b/partials/adminpanel.html
@@ -1,10 +1,8 @@
-	<div class="row" ng-app="App">
+	<div class="row">
 	  <div class="large-12 columns" ng-controller="NavCtrl">
-			<nav class="nav-menu" menu-data="menu"></nav>
+			<nav class="nav-menu navbar navbar-default" menu-data="menu"  ng-controller="LoginCtrl"></nav>
 
-          <!--             <nav class="top-bar">
-            	    		<section class="anav-menu top-bar-section" menu-data="menu"></section>
-                		</nav> 
--->
+
+
 	  </div>
 	</div>
