View Principals working / WIP: Modify Principal Button

--- a/partials/principal.html
+++ b/partials/principal.html
@@ -1,4 +1,6 @@
-
+<div ng-controller="NavCtrl">
+	<nav class="nav-menu" menu-data="menu"></nav>
+</div>
 <!-- @todo: Proper Layout / Containers are testing objects -->
 <div class="container">
 	<div class="row">
@@ -6,8 +8,18 @@
 			<div class="panel panel-default">
 				<div class="panel-header">Create Principal</div>
 				<div class="panel-body">
-					<input ng-model="newPrincipalName" type="text" name="newPrincipalName" value="" placeholder="Principal Name">
+					<input ng-model="newPrincipalName" type="text" placeholder="Principal Name">
 					<button type="submit" class="btn btn-default" ng-click="createPrincipalFunc()">Create</button>	
+				</div>
+			</div>
+								
+		</div>
+		<div class="col-sm-3">
+			<div class="panel panel-default">
+				<div class="panel-header">View Principal</div>
+				<div class="panel-body">
+					<input ng-model="viewPrincipal" type="text"  placeholder="Principal Name">
+					<button type="submit" class="btn btn-default" ng-click="viewPrincipalFunc()">View</button>	
 				</div>
 			</div>
 								
@@ -23,13 +35,26 @@
 					<th>ID</th>
 					<th>Principal Name</th>
 					<th>Created By</th>
+					<th>Created</th>
+					<th></th>
 				</tr>
-				<tr ng-repeat="principal in principals">
-					<td>{{principal.id}}</th>
-					<td>{{principal.name}}</th>
-					<td>{{principal.author}}</th>
-				</tr>
+				<div>
+					<tr>
+						<td>{{principal.ID}}</td>
+						<td ng-hide="editorEnabled">{{principal.Name}}
+						</td>
+						<td ng-show="editorEnabled">
+							<input value="{{principal.Name}}"/>
+						</td>
+						<td>{{principal.CreatedBy}}</td>
+						<td>{{principal.Created}}</td>
+						<td><button type="submit" class="btn btn-default" ng-click="editorEnabled">Modify</button></td>
+
+					</tr>				
+				</div>
 			</table>						
 		</div>
 	</div>
 </div>
+
+
