--- a/partials/adminpanel.html
+++ b/partials/adminpanel.html
@@ -1,4 +1,1 @@
-<div class="large-12 columns" ng-controller="NavCtrl">
-<nav class="nav-menu" menu-data="menu"></nav>
-</div>
-
+<h1>Adminpanel</h1>
