--- a/partials/currency.html
+++ b/partials/currency.html
@@ -1,8 +1,5 @@
-<div ng-controller="NavCtrl">
-	<nav class="nav-menu" menu-data="menu"></nav>
-</div>
-
 <div>
+	<h1>Currency</h1>
 	<ul class="currency">
 		<li ng-repeat="cur in currency">
 			{{cur}}
