--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -1,8 +1,10 @@
-<ul id="parentTreeNavigation">
+<ul class="pdnav">
 	<li ng-repeat="node in menu">
 		<a ng-href="{{node.href}}">{{node.text}}</a>
-		<ul ng-repeat="child in node.children">
-			<li><a ng-href="{{child.href}}">{{child.text}}</a></li>
+		<ul class="pdsubnav">
+			<li ng-repeat="child in node.children">
+				<a ng-href="{{child.href}}">{{child.text}}</a>
+			</li>
 		</ul>
 	</li>
 </ul>
